--- a/GrpcClient/GrpcClient.csproj
+++ b/GrpcClient/GrpcClient.csproj
@@ -1,13 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MongoDB.Bson" Version="2.15.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GrpcProto\GrpcProto.csproj" />
